Add logo to PDFs, footer, optimize dashboard, fix mobile API URLs

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,9 @@
       name="description"
       content="Seller Portal - Order Management System"
     />
-    <title>Adnan Khaddar Portal - Management System</title>
+    <title>Adnan Khaddar House</title>
     <link rel="icon" href="/img/logo.png" />
+    <meta name="description" content="Adnan Khaddar House - High Quality Management System. Order Management, Inventory, Billing & More." />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
