--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,9 @@
       content="Seller Portal - Order Management System"
     />
     <title>Adnan Khaddar House</title>
-    <link rel="icon" href="/img/logo.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/img/logo.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/img/logo.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/img/logo.png" />
     <meta name="description" content="Adnan Khaddar House - High Quality Management System. Order Management, Inventory, Billing & More." />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
